--- a/frontend/public/cast_receiver.html
+++ b/frontend/public/cast_receiver.html
@@ -27,7 +27,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      border: none;
+      border: 5px solid red; /* Temporary: verify iframe is visible */
     }
     #screensaver-prevention {
       position: absolute;
