Add sandbox attribute to iframe to allow scripts

--- a/frontend/public/cast_receiver.html
+++ b/frontend/public/cast_receiver.html
@@ -81,7 +81,7 @@
   </div>
 
   <div id="iframe-container">
-    <iframe id="viewer-frame" src="" allow="autoplay"></iframe>
+    <iframe id="viewer-frame" src="" allow="autoplay" sandbox="allow-same-origin allow-scripts allow-forms allow-popups allow-modals"></iframe>
   </div>
 
   <!-- Invisible video to prevent screensaver -->
