Remove sandbox attribute from iframe - testing if it blocks React

--- a/frontend/public/cast_receiver.html
+++ b/frontend/public/cast_receiver.html
@@ -82,7 +82,7 @@
   </div>
 
   <div id="iframe-container">
-    <iframe id="viewer-frame" src="" allow="autoplay" sandbox="allow-same-origin allow-scripts allow-forms allow-popups allow-modals"></iframe>
+    <iframe id="viewer-frame" src="" allow="autoplay"></iframe>
   </div>
 
   <!-- Invisible video to prevent screensaver - TEMPORARILY DISABLED FOR TESTING -->
